Fix mobile nav bar spacing

--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -50,6 +50,7 @@ nav {
 	}
 	#mobile-nav-main-container{
 		display: flex;
+		align-items: center;
 		height: 100%;
 		margin-bottom: -2px;
 	}
@@ -71,7 +72,7 @@ nav {
 		width: 100%;
 		padding-bottom: 7px;
 		background-color: #2d32af;
-        z-index: 1;
+        	z-index: 1;
 	}
 	#mobile-nav-list > a{
 		color: white;
@@ -93,6 +94,9 @@ nav {
 		background-color: white;
 		color: #2d32af;
   	}
+	#mobile-nav-button > svg{
+		vertical-align: unset;
+	}
   	.active {
 		background-color: #4CAF50;
 		color: white;
